--- a/01_Declaracao/index.html
+++ b/01_Declaracao/index.html
@@ -11,7 +11,7 @@
 
     <script src="forma.js"></script>
     <script>
-        const forma = new Forma();
+        const forma = new Forma(10);
         document.getElementById('btnImprimir').addEventListener('click', function(){
             forma.imprimeForma();
         });
